Versión 1.4 Volver a la calculadora.

--- a/src/app/componentes/multiplicar/multiplicar.component.html
+++ b/src/app/componentes/multiplicar/multiplicar.component.html
@@ -1,4 +1,5 @@
 <p>Ésta es la tabla del {{factor}}</p>
-<ul>
+<ul (click) = "volverACalculadora()">
+    <li>Haz click aquí para volver a la calculadora</li>
     <li *ngFor = "let posicion of tabla; let i = index">{{factor}} * {{i}} = {{factor * i}}.</li>
 </ul>
