--- a/src/app/componentes/about/about.component.html
+++ b/src/app/componentes/about/about.component.html
@@ -1,1 +1,4 @@
 <p>about works!</p>
+<input type="text" [(ngModel)] = "nombre"><br>
+<input type="text" [(ngModel)] = "apellido"><br>
+<button (click) = "llevame()">Generar saludo</button>
