--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -18,6 +18,12 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/calculadora">Calculadora</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/tuberias">Tuberias</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/estructuras">Estructuras</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
